@@ -248,6 +248,7 @@ MAXVALUE : M A X V A L U E;
 
 PARTITION : P A R T I T I O N;
 PARTITIONS : P A R T I T I O N S;
+PURGE : P U R G E;
 
 ROLLUP : R O L L U P;
 
