@@ -332,25 +332,6 @@ public class TajoClient {
     }.withRetries();
   }
 
-  /**
-   * Deletes table schema from catalog data, but doesn't delete data file in hdfs.
-   * @param tableName
-   * @return
-   * @throws ServiceException
-   */
-  public boolean detachTable(final String tableName) throws ServiceException {
-    return new ServerCallable<Boolean>(conf, tajoMasterAddr,
-        TajoMasterClientProtocol.class, false, true) {
-      public Boolean call(NettyClientBase client) throws ServiceException {
-        TajoMasterClientProtocolService.BlockingInterface tajoMasterService = client.getStub();
-
-        StringProto.Builder builder = StringProto.newBuilder();
-        builder.setValue(tableName);
-        return tajoMasterService.detachTable(null, builder.build()).getValue();
-      }
-    }.withRetries();
-  }
-
   public TableDesc createExternalTable(final String name, final Schema schema, final Path path, final TableMeta meta)
       throws SQLException, ServiceException {
     return new ServerCallable<TableDesc>(conf, tajoMasterAddr,
@@ -373,20 +354,25 @@ public class TajoClient {
     }.withRetries();
   }
 
+  public boolean dropTable(final String tableName) throws ServiceException {
+    return dropTable(tableName, false);
+  }
+
   /**
    * Deletes table schema from catalog data and deletes data file in hdfs
    * @param tableName
    * @return
    * @throws ServiceException
    */
-  public boolean dropTable(final String tableName) throws ServiceException {
+  public boolean dropTable(final String tableName, final boolean purge) throws ServiceException {
     return new ServerCallable<Boolean>(conf, tajoMasterAddr,
         TajoMasterClientProtocol.class, false, true) {
       public Boolean call(NettyClientBase client) throws ServiceException {
         TajoMasterClientProtocolService.BlockingInterface tajoMasterService = client.getStub();
 
-        StringProto.Builder builder = StringProto.newBuilder();
-        builder.setValue(tableName);
+        DropTableRequest.Builder builder = DropTableRequest.newBuilder();
+        builder.setName(tableName);
+        builder.setPurge(purge);
         return tajoMasterService.dropTable(null, builder.build()).getValue();
       }
     }.withRetries();
